@startuml
!include ../VanskarnerStyle.puml

title REALITY DUE TO CONTEXT
package cleanmovie as "com.vanskarner.cleanmovie" {
    class FavoritesPresenter
}
package movie as "com.vanskarner.movie" {
    interface MovieServices<<interface>>
    class MovieDefaultServices classNotVisible
    interface MovieLocalRepository<<interface>>
    class FindFavoriteMovieUseCase classNotVisible
    class MovieLocalRxRepository classNotVisible

    MovieServices <|.. MovieDefaultServices
    MovieDefaultServices --> FindFavoriteMovieUseCase
    FindFavoriteMovieUseCase --> MovieLocalRepository
    MovieLocalRepository <|.. MovieLocalRxRepository
}

FavoritesPresenter ..> MovieServices: <<use>>

skinparam titleFontColor red
hide members
@enduml